# Satellite-Image-Land-Cover-Classification-System

./: .gitignore  README.md  app.py  pyproject.toml  run_pipeline.py
src/analysis/: __init__.py  ndvi_anomaly.py
src/data/: dataset.py  download_ee.py  download_quickstart.py  download_sar.py  fusion_dataset.py  raster_utils.py  sar_preprocess.py  timeseries.py
src/eval/: uncertainty.py
src/models/: __init__.py  benchmark.py  segformer_module.py
src/training/: augmentations.py
src/vis/: map_export.py
